{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 78,
  "lineage": "62b7ef9e-c86c-5683-4ab7-529ffd131ba1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:internet-gateway/igw-079d764657010cb06",
            "id": "igw-079d764657010cb06",
            "owner_id": "041744643314",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:vpc/vpc-0d76699f751654306",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ff1da1580474519",
            "default_route_table_id": "rtb-02b7f4cafbcc1edb7",
            "default_security_group_id": "sg-06049729c3640b3ae",
            "dhcp_options_id": "dopt-0fef1ce0d9d462260",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d76699f751654306",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b7f4cafbcc1edb7",
            "owner_id": "041744643314",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.PrivateSubnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3859c9b1b9aaf0c",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-0a31158121e7f1904"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d428b2e30724dec",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-0a4f9f91e4fdb09ae"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb06013210b3c5ca",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-09a2063187a05aabf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0990e840e22d574a8",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-09fca27fba235010e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c4673f32552d79a",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-0cd942835f347927e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081c05e5b9a2b61e0",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-079491d36e9043a9f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da1e6ae35b8b60b1",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-00f6bbdb784ae3950"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01761015411dcf82f",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-087f047734a1e06b2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ae5c2f2fff0fd1",
            "route_table_id": "rtb-05cd07dfa775eb579",
            "subnet_id": "subnet-0c3bb2f0992f3e1e4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PrivateSubnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-0a31158121e7f1904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a31158121e7f1904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-1"
            },
            "tags_all": {
              "Name": "demo-private-subnet-1"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-0a4f9f91e4fdb09ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4f9f91e4fdb09ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-2"
            },
            "tags_all": {
              "Name": "demo-private-subnet-2"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-09a2063187a05aabf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a2063187a05aabf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-3"
            },
            "tags_all": {
              "Name": "demo-private-subnet-3"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-09fca27fba235010e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fca27fba235010e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-4"
            },
            "tags_all": {
              "Name": "demo-private-subnet-4"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-0cd942835f347927e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd942835f347927e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-5"
            },
            "tags_all": {
              "Name": "demo-private-subnet-5"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-079491d36e9043a9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079491d36e9043a9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-6"
            },
            "tags_all": {
              "Name": "demo-private-subnet-6"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-00f6bbdb784ae3950",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f6bbdb784ae3950",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-7"
            },
            "tags_all": {
              "Name": "demo-private-subnet-7"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-087f047734a1e06b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087f047734a1e06b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-8"
            },
            "tags_all": {
              "Name": "demo-private-subnet-8"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-0c3bb2f0992f3e1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3bb2f0992f3e1e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet-9"
            },
            "tags_all": {
              "Name": "demo-private-subnet-9"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PublicSubnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0607695698a0cdd18",
            "route_table_id": "rtb-0ee74da4361189ab1",
            "subnet_id": "subnet-09671d8ee9308dd52"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f058b8fce700c203",
            "route_table_id": "rtb-0ee74da4361189ab1",
            "subnet_id": "subnet-04f53ba545abd95ed"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dc08de40c046321",
            "route_table_id": "rtb-0ee74da4361189ab1",
            "subnet_id": "subnet-03addc5cd35ad00fd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PublicSubnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-09671d8ee9308dd52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09671d8ee9308dd52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-subnet-1"
            },
            "tags_all": {
              "Name": "demo-public-subnet-1"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-04f53ba545abd95ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f53ba545abd95ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-subnet-2"
            },
            "tags_all": {
              "Name": "demo-public-subnet-2"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:subnet/subnet-03addc5cd35ad00fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03addc5cd35ad00fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041744643314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-subnet-3"
            },
            "tags_all": {
              "Name": "demo-public-subnet-3"
            },
            "vpc_id": "vpc-0d76699f751654306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.nat-gateway[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0513edea49b246f72",
            "domain": "vpc",
            "id": "eipalloc-0513edea49b246f72",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-36-3.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.36.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.nat-gateway[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0513edea49b246f72",
            "connectivity_type": "public",
            "id": "nat-0d83b295222c716fa",
            "network_interface_id": "eni-0cc2b0128f08c259c",
            "private_ip": "10.0.2.93",
            "public_ip": "15.206.36.3",
            "subnet_id": "subnet-04f53ba545abd95ed",
            "tags": {
              "Name": "demo-nat"
            },
            "tags_all": {
              "Name": "demo-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.privateRouteTable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:route-table/rtb-05cd07dfa775eb579",
            "id": "rtb-05cd07dfa775eb579",
            "owner_id": "041744643314",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d83b295222c716fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-private-rt-rt"
            },
            "tags_all": {
              "Name": "demo-private-rt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d76699f751654306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.publicRouteTable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:route-table/rtb-0ee74da4361189ab1",
            "id": "rtb-0ee74da4361189ab1",
            "owner_id": "041744643314",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079d764657010cb06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-rt-rt"
            },
            "tags_all": {
              "Name": "demo-public-rt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d76699f751654306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:041744643314:security-group/sg-040c363d42b4daae5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-040c363d42b4daae5",
            "ingress": [],
            "name": "demo-sg-name",
            "name_prefix": "",
            "owner_id": "041744643314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-sg-name",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Name": "demo-sg-name",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d76699f751654306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_with_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3351075856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-040c363d42b4daae5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule for port 80",
            "from_port": 80,
            "id": "sgrule-2657927859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040c363d42b4daae5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule for port 443",
            "from_port": 443,
            "id": "sgrule-480354937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040c363d42b4daae5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}